--- a/interface/templates/create_infraction.html
+++ b/interface/templates/create_infraction.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {%block content %}
-<h2>Cargar Infracciones</h2>
+<h2 class="text-center">Crear infracción</h2>
 
 <div class="row">
   <div class="col-md-6">
@@ -68,7 +68,7 @@
 <div class="container mt-5">
   <div class="card">
     <div class="card-body">
-      <h2 class="card-title mb-4">Crear infracción</h2>
+      <h2 class="card-title mb-4">Nueva infracción</h2>
 
       <div
         class="alert alert-warning alert-dismissible fade show"
