--- a/interface/templates/create_infraction.html
+++ b/interface/templates/create_infraction.html
@@ -155,6 +155,8 @@
 {% endif %}
 
 <script>
+
+  const host = window.location.origin;
   // Function to get the current date and time in ISO format
   const getCurrentDateTime = () => {
     const now = new Date();
@@ -203,7 +205,7 @@
 
       const token = "{{token.access}}";
 
-      fetch("http://localhost:6565/api/infractions/cargar_infraccion/", {
+      fetch(`${host}/api/infractions/cargar_infraccion/`, {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
@@ -219,7 +221,6 @@
         .then((data) => {
           if (data.status === 202) {
             // Success response
-            console.log("Success:", data.body);
             document.querySelector(".alert-warning").style.display = "block";
             document.getElementById("placaPatente").value = "";
             document.getElementById("timestamp").value = getCurrentDateTime();
